--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -26,10 +26,10 @@ jobs:
           docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
           
       - name: Build kwetterspa docker image
-        run: docker build . --file Dockerfile -t siem228/kwetter
+        run: docker build . --file Dockerfile -t "siem228/kwetter"
         
       - name: Push kwetterspa docker image
-        run: docker push siem228/kwetter:latest
+        run: docker push "siem228/kwetter:latest"
         
   deployment:
       needs: [create-kwetterspa-image]
