--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -45,4 +45,4 @@ jobs:
             CLUSTER_NAME: ${{ secrets.CLUSTER_NAME }}
             ZONE_NAME: europe-west1
           with:
-            args: apply -f music.yml
+            args: apply -f kwetterspa.yaml
