--- a/kwetterspa.yaml
+++ b/kwetterspa.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: kweetspa-depl
+  name: kwetterspa-depl
 spec:
   selector:
     matchLabels:
@@ -36,30 +36,3 @@ spec:
       protocol: TCP
       port: 3000
       targetPort: 3000
-
----
-
-apiVersion: autoscaling/v2
-kind: HorizontalPodAutoscaler
-metadata:
-  name: kwetterspadb-hpa
-spec:
-  scaleTargetRef:
-    apiVersion: apps/v1
-    kind: Deployment
-    name: kwetterspadb
-  minReplicas: 1
-  maxReplicas: 4
-  metrics:
-    - type: Resource
-      resource:
-        name: cpu
-        target:
-          type: Utilization
-          averageUtilization: 50
-    - type: Resource
-      resource:
-        name: memory
-        target:
-          type: AverageValue
-          averageValue: 400Mi
