--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -25,10 +25,10 @@ jobs:
         run: |
           docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
           
-      - name: Build user service docker image
+      - name: Build kwetter-spa docker image
         run: docker build . --file Dockerfile -t "$DOCKER_USERNAME/$PRODUCT_REPO_NAME:latest"
       
-      - name: Push user service docker image
+      - name: Push kwetter-spa docker image
         run: docker push "$DOCKER_USERNAME/$PRODUCT_REPO_NAME:latest"
         
   deployment:
